# slm

./: .gitignore  .gitmodules  MLP.ipynb  README.md  draw.py  gpt-dev.ipynb  grad.ipynb  pyproject.toml  value.py
.claude/: CLAUDE.md  settings.local.json
.ipynb_checkpoints/: grad-checkpoint.ipynb
docs/: autograd-implementation.md  autograd-mlp-implementation.md  fastmetro-hand-implementation.md  gpt-implementation.md  mlp-implementation.md
freihand/: README.md  infer.py  requirements.txt  train_freihand.py
freihand/scripts/: infer.sh  train.sh
freihand/src/: export_obj.py  train_freihand.py
freihand/src/datasets/: __init__.py  freihand.py  freihand_dataset.py
freihand/src/modeling/: fastmetro.py  mano_utils.py
freihand/src/modeling/model/: __init__.py  modeling_fastmetro_hand.py
freihand/src/utils/: __init__.py  geometric_layers.py  mano_wrapper.py  mesh_io.py  mesh_sampler.py  obj_exporter.py
gpt-2/: generate.py  train.py
