[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "tiktoken>=0.12.0",
    "transformers[torch]>=5.5.0",
    "torch==2.10.0+cu128",
    "torchvision==0.25.0+cu128",
    "numpy>=1.23,<2.0",
    "Pillow>=9.0",
    "tqdm>=4.64.0",
    "scipy>=1.10",
    "chumpy",
    "manopth",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
chumpy = { git = "https://github.com/hassony2/chumpy.git" }
manopth = { git = "https://github.com/hassony2/manopth.git", rev = "4f1dcad1201ff1bfca6e065a85f0e3456e1aa32b" }

